# fyp-backend

./: .gitignore  pyproject.toml  readme.md  sectors.json
fyp/: celery.py  settings.py  settings.py.example  urls.py  wsgi.py
ml/: urls.py  views.py
ml/data/: stocks.csv
ml/data/scraping/: sector_mapper.py
ml/scraping/: scrape_sectors.py  sector_mapper.py
portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
stock/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
stock/management/commands/: load_historic_data.py  sync_stock_data.py
stock/migrations/: 0001_initial.py  0002_auto_20240812_0111.py  0003_auto_20240812_0118.py
trading/: admin.py  models.py  serializers.py  urls.py  views.py
user/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
