[tool.poetry]
name = "fyp-backend"
version = "0.1.0"
description = ""
authors = ["shalin-devkota <shalin.devkota01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
bs4 = "^0.0.2"
requests = "^2.32.3"
djoser = "^2.2.3"
setuptools = "57.5.0"
celery = "^5.4.0"
python-decouple = "^3.8"
requests-html = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
